001.OldBoy-Prometheus_Grafana/etcd-export.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: etcd-monitor
  namespace: kube-system
  labels:
    k8s: etcd-monitor
subsets:
  - addresses:
      - ip: "192.168.12.13"
    ports:
      - port: 2379
        name: etcd
        protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: etcd-monitor
  namespace: kube-system
  labels:
    k8s: etcd-monitor
spec:
  ports:
    - port: 2379
      targetPort: 2379
      protocol: TCP
      name: etcd
