001.OldBoy-Prometheus_Grafana/java-export.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: java-svc
  namespace: default
  labels:
    k8s: java
subsets:
  - addresses:
      - ip: "192.168.12.50"
    ports:
      - port: 8761
    name: java-svc
    protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: java-svc
  namespace: default
  labels:
    k8s: java
spec:
  ports:
    - port: 8761
      targetPort: 8761
      protocol: TCP
      name: java-svc
---
